--- a/bws_menu/languages/bestwebsoft-fr_FR.po
+++ b/bws_menu/languages/bestwebsoft-fr_FR.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bestwebsoft\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-28 13:51+0300\n"
-"PO-Revision-Date: 2017-03-28 13:51+0300\n"
+"POT-Creation-Date: 2017-05-08 15:43+0300\n"
+"PO-Revision-Date: 2017-05-08 15:43+0300\n"
 "Last-Translator: Luc Capronnier <lcapronnier@yahoo.com>\n"
 "Language-Team: Luc Capronnier <lcapronnier@yahoo.com>\n"
 "Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-KeywordsList: __;_e\n"
+"X-Poedit-KeywordsList: __;_e;esc_attr_e\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "Plural-Forms: nplurals=2;plural=n>2;\n"
@@ -49,7 +49,7 @@ msgstr "Notez là"
 msgid "Need help?"
 msgstr "Besoin d'aide ?"
 
-#: bws_functions.php:103 bws_functions.php:916 class-bws-settings.php:1047
+#: bws_functions.php:103 bws_functions.php:907 class-bws-settings.php:1047
 msgid "Visit Help Center"
 msgstr "Visiter le site du support"
 
@@ -149,7 +149,7 @@ msgid "Add New"
 msgstr "Ajouter"
 
 #: bws_functions.php:216 bws_functions.php:226 bws_functions.php:330
-#: bws_functions.php:378 bws_functions.php:482
+#: bws_functions.php:378 bws_functions.php:480
 msgid "Close notice"
 msgstr "Effacer l'avertissement"
 
@@ -203,12 +203,12 @@ msgstr ""
 "Votre clé de licence pour %s est terminée le %s et vous ne disposerez plus "
 "du support rapide et des mises à jour."
 
-#: bws_functions.php:477
+#: bws_functions.php:475
 #, php-format
 msgid "Thank you for choosing %s plugin!"
 msgstr ""
 
-#: bws_functions.php:478
+#: bws_functions.php:476
 msgid ""
 "If you have a feature, suggestion or idea you'd like to see in the plugin, "
 "we'd love to hear about it!"
@@ -216,25 +216,25 @@ msgstr ""
 "Si vous avez une fonctionnalité, une suggestion ou une idée que vous "
 "souhaitez pour cette extension, nous serons ravis d'en parler avec vous !"
 
-#: bws_functions.php:479
+#: bws_functions.php:477
 msgid "Suggest a Feature"
 msgstr "Proposer une fonctionnalité"
 
-#: bws_functions.php:495 class-bws-settings.php:533 class-bws-settings.php:536
+#: bws_functions.php:493 class-bws-settings.php:533 class-bws-settings.php:536
 #: class-bws-settings.php:584 class-bws-settings.php:587
 msgid "Notice"
 msgstr "Avertissement"
 
-#: bws_functions.php:495
+#: bws_functions.php:493
 msgid "The plugin's settings have been changed."
 msgstr "Les paramètres de l'extension ont été modifiés."
 
-#: bws_functions.php:496 class-bws-settings.php:182 class-bws-settings.php:202
+#: bws_functions.php:494 class-bws-settings.php:182 class-bws-settings.php:202
 #: deprecated.php:640
 msgid "Save Changes"
 msgstr "Enregistrer les modifications"
 
-#: bws_functions.php:510
+#: bws_functions.php:508
 msgid ""
 "You can always look at premium options by checking the \"Pro Options\" in "
 "the \"Misc\" tab."
@@ -242,63 +242,71 @@ msgstr ""
 "Vous pouvez toujours consulter les options premium en cliquant sur le lien "
 "\"Voir les fonctionnalités de la version PRO\" dans l'onglet divers."
 
-#: bws_functions.php:651
+#: bws_functions.php:629
+msgid "Add BWS Shortcode"
+msgstr ""
+
+#: bws_functions.php:630
+msgid "Add BWS Plugins Shortcode"
+msgstr "Ajouter le code court de l'extension BWS"
+
+#: bws_functions.php:649
 msgid "Add shortcode"
 msgstr "Ajouter le code court"
 
-#: bws_functions.php:651
+#: bws_functions.php:649
 msgid "Add BestWebSoft plugins' shortcodes using this button."
 msgstr "Ajouter le code court des extensions BestWebSoft avec ce bouton."
 
-#: bws_functions.php:700
+#: bws_functions.php:695
 msgid "Close"
 msgstr "Fermer"
 
-#: bws_functions.php:792
+#: bws_functions.php:787
 msgid "Are you sure you want to restore default settings?"
 msgstr "Êtes vous sûr de vouloir remettre toutes les valeurs par défaut ?"
 
-#: bws_functions.php:795
+#: bws_functions.php:790
 msgid "Yes, restore all settings"
 msgstr "Oui, remettre les valeurs par défaut"
 
-#: bws_functions.php:796
+#: bws_functions.php:791
 msgid "No, go back to the settings page"
 msgstr "Non, retourner à la page des paramètres"
 
-#: bws_functions.php:842
+#: bws_functions.php:833
 msgid "Plugin"
 msgstr "Extension"
 
-#: bws_functions.php:851
+#: bws_functions.php:842
 msgid "Shortcode settings"
 msgstr "Paramètres du code court"
 
-#: bws_functions.php:856
+#: bws_functions.php:847
 msgid "The shortcode will be inserted"
 msgstr "Le code court sera inséré"
 
-#: bws_functions.php:861
+#: bws_functions.php:852
 msgid "Insert"
 msgstr "Insérer"
 
-#: bws_functions.php:921
+#: bws_functions.php:912
 msgid "FAQ"
 msgstr "FAQ"
 
-#: bws_functions.php:927
+#: bws_functions.php:918
 msgid "For more information:"
 msgstr "Pour plus d'informations&nbsp;:"
 
-#: bws_functions.php:928
+#: bws_functions.php:919
 msgid "Documentation"
 msgstr "Documentation"
 
-#: bws_functions.php:929
+#: bws_functions.php:920
 msgid "Video Instructions"
 msgstr "Vidéo explicative"
 
-#: bws_functions.php:930
+#: bws_functions.php:921
 msgid "Submit a Request"
 msgstr "Soumettre une requête"
 
@@ -1170,6 +1178,312 @@ msgstr "Utilitaires"
 msgid "Other"
 msgstr "Autre"
 
+#: product_list.php:22
+msgid ""
+"Protect WordPress website forms from spam entries by means of math logic."
+msgstr ""
+
+#: product_list.php:32
+msgid "Create your personal car rental/booking and reservation website."
+msgstr ""
+
+#: product_list.php:42
+msgid ""
+"Allow customers to reach you using secure contact form plugin any website "
+"must have."
+msgstr ""
+
+#: product_list.php:52
+msgid "Add unlimited number of contact forms to WordPress website."
+msgstr ""
+
+#: product_list.php:62
+msgid "Save and manage contact form messages. Never lose important data."
+msgstr ""
+
+#: product_list.php:72
+msgid "Add unlimited custom pages to WordPress admin dashboard."
+msgstr ""
+
+#: product_list.php:79
+msgid "Add custom fields to WordPress website search results."
+msgstr ""
+
+#: product_list.php:86
+msgid "Add custom post types to WordPress website search results."
+msgstr ""
+
+#: product_list.php:96
+msgid ""
+"Manage database and file system right from your WordPress admin dashboard."
+msgstr ""
+
+#: product_list.php:105
+msgid "Add PayPal and 2CO donate buttons to receive charity payments."
+msgstr ""
+
+#: product_list.php:112
+msgid ""
+"Automatically add outgoing email messages to queue instead of sending them "
+"immediately."
+msgstr ""
+
+#: product_list.php:119
+msgid ""
+"Get latest error log messages to diagnose website problems. Define and fix "
+"issues faster."
+msgstr ""
+
+#: product_list.php:126
+msgid ""
+"Add Facebook Like, Share and Profile buttons to WordPress posts, pages and "
+"widgets."
+msgstr ""
+
+#: product_list.php:136
+msgid ""
+"Add featured posts to WordPress posts or widgets. Highlight important "
+"information."
+msgstr ""
+
+#: product_list.php:143
+msgid ""
+"Add beautiful galleries, albums & images to your Wordpress website in few "
+"clicks."
+msgstr ""
+
+#: product_list.php:153
+msgid ""
+"Add unlimited gallery categories. Organize images to make the navigation "
+"through content easier."
+msgstr ""
+
+#: product_list.php:160
+msgid ""
+"Add Google +1 Share, Follow, Hangout buttons and profile badge to WordPress "
+"posts, pages and widgets."
+msgstr ""
+
+#: product_list.php:170
+msgid ""
+"Add Adsense ads to pages, posts, custom posts, search results, categories, "
+"tags, pages, and widgets."
+msgstr ""
+
+#: product_list.php:180
+msgid "Add Google Analytics code to WordPress website and track basic stats."
+msgstr ""
+
+#: product_list.php:190
+msgid ""
+"Protect WordPress website forms from spam entries with Google Captcha "
+"(reCaptcha)."
+msgstr ""
+
+#: product_list.php:200
+msgid "Add customized Google maps to WordPress posts, pages and widgets."
+msgstr ""
+
+#: product_list.php:210
+msgid ""
+"Generate and add XML sitemap to WordPress website. Help search engines index "
+"your blog."
+msgstr ""
+
+#: product_list.php:220
+msgid ""
+"Replace external WordPress website links with Google shortlinks and track "
+"click stats."
+msgstr ""
+
+#: product_list.php:227
+msgid ""
+"Protect WordPress website – allow and deny access for certain IP addresses, "
+"hostnames, etc."
+msgstr ""
+
+#: product_list.php:237
+msgid ""
+"Create your personal job board and listing WordPress website. Search jobs, "
+"submit CV/resumes, choose candidates."
+msgstr ""
+
+#: product_list.php:244
+msgid ""
+"Add latest posts or latest posts for selected categories widgets to "
+"WordPress website."
+msgstr ""
+
+#: product_list.php:251
+msgid ""
+"Protect WordPress website against brute force attacks. Limit rate of login "
+"attempts."
+msgstr ""
+
+#: product_list.php:261
+msgid ""
+"Add LinkedIn Share and Follow buttons to WordPress posts, pages and widgets. "
+"5 plugins included – profile, insider, etc."
+msgstr ""
+
+#: product_list.php:271
+msgid ""
+"Translate WordPress website content to other languages manually. Create "
+"multilingual pages, posts, widgets, menus, etc."
+msgstr ""
+
+#: product_list.php:281
+msgid ""
+"Add customizable pagination to WordPress website. Split long content to "
+"multiple pages for better navigation."
+msgstr ""
+
+#: product_list.php:291
+msgid ""
+"Generate PDF files and print WordPress posts/pages. Customize document "
+"header/footer styles and appearance."
+msgstr ""
+
+#: product_list.php:301
+msgid ""
+"Add Pinterest Follow, Pin It buttons and profile widgets (Pin, Board, "
+"Profile) to WordPress posts, pages and widgets."
+msgstr ""
+
+#: product_list.php:311
+msgid "Track views, comments and add most popular posts to Wordpress widgets."
+msgstr ""
+
+#: product_list.php:318
+msgid ""
+"Create your personal portfolio WordPress website. Manage and showcase past "
+"projects to get more clients."
+msgstr ""
+
+#: product_list.php:328
+msgid "Export WordPress posts to CSV file format easily. Configure data order."
+msgstr ""
+
+#: product_list.php:335
+msgid ""
+"Add extra fields to default WordPress user profile. The easiest way to "
+"create and manage additional custom values."
+msgstr ""
+
+#: product_list.php:342
+msgid ""
+"Add and display HTML advertisement on WordPress website. Customize bar "
+"styles and appearance."
+msgstr ""
+
+#: product_list.php:352
+msgid ""
+"Add customizable quotes and tips blocks to WordPress posts, pages and "
+"widgets."
+msgstr ""
+
+#: product_list.php:359
+msgid ""
+"Add rating plugin to your WordPress website to receive feedback from your "
+"customers."
+msgstr ""
+
+#: product_list.php:366
+msgid ""
+"Create your personal real estate WordPress website. Sell, rent and buy "
+"properties. Add, search and browse listings easily."
+msgstr ""
+
+#: product_list.php:376
+msgid ""
+"Attach, unattach and re-attach media files quickly to WordPress posts and "
+"pages."
+msgstr ""
+
+#: product_list.php:383
+msgid ""
+"Add related posts to WordPress posts or widgets. Link your readers to "
+"relevant content."
+msgstr ""
+
+#: product_list.php:390
+msgid ""
+"Send bulk email messages to WordPress users. Custom templates, advanced "
+"settings and detailed reports."
+msgstr ""
+
+#: product_list.php:400
+msgid ""
+"The best responsive slider plugin for your WordPress website. Create "
+"beautifully animated slides just in a few clicks."
+msgstr ""
+
+#: product_list.php:407
+msgid ""
+"Configure SMTP server to receive email messages from WordPress to Gmail, "
+"Yahoo, Hotmail and other services."
+msgstr ""
+
+#: product_list.php:414
+msgid ""
+"Add social media buttons and widgets to WordPress posts, pages and widgets. "
+"FB, Twitter, G+1, Pinterest, LinkedIn."
+msgstr ""
+
+#: product_list.php:424
+msgid ""
+"Add social media login, registration, and commenting to your WordPress "
+"website."
+msgstr ""
+
+#: product_list.php:431
+msgid ""
+"Add email newsletter sign up form to WordPress posts, pages and widgets. "
+"Collect data and subscribe your users."
+msgstr ""
+
+#: product_list.php:441
+msgid ""
+"Add testimonials and feedbacks from your customers to WordPress posts, pages "
+"and widgets."
+msgstr ""
+
+#: product_list.php:448
+msgid ""
+"Best timesheet plugin for WordPress. Track employee time, streamline "
+"attendance and generate reports."
+msgstr ""
+
+#: product_list.php:458
+msgid ""
+"Add Twitter Follow, Tweet, Hashtag, and Mention buttons to WordPress posts, "
+"pages and widgets."
+msgstr ""
+
+#: product_list.php:468
+msgid ""
+"Automatically check and update WordPress website core with all installed "
+"plugins and themes to the latest versions."
+msgstr ""
+
+#: product_list.php:478
+msgid ""
+"Powerful user role management plugin for WordPress website. Create, edit, "
+"copy, and delete user roles."
+msgstr ""
+
+#: product_list.php:488
+msgid ""
+"Display live count of online visitors who are currently browsing your "
+"WordPress website."
+msgstr ""
+
+#: product_list.php:498
+msgid ""
+"Backup and export Zendesk Help Center content automatically to your "
+"WordPress website database."
+msgstr ""
+
 #~ msgid "Thank you for installing"
 #~ msgstr "Merci d'avoir installé"
 
@@ -1267,9 +1581,6 @@ msgstr "Autre"
 #~ msgstr ""
 #~ "Vous pouvez trouver votre clé de licence sur votre page personnelle dans "
 #~ "la zone cliente en cliquant sur le lien"
-
-#~ msgid "Add BWS Plugins Shortcode"
-#~ msgstr "Ajouter le code court de l'extension BWS"
 
 #~ msgid ""
 #~ "(your username is the email you specify when purchasing the product), "
